# transcriber

./: .gitignore  AGENTS.md  Makefile  cli.py  downstream_retrain_doe.py  pyproject.toml  readme.md  speaker_id_program.md
.outputs/session_15/: session_15.diarization.json  session_15.jsonl  session_15.speaker_bank.json  session_15.srt  session_15.txt
config/: autoresearch_speaker_id.yaml  downstream_retrain_doe.dev.yaml  session_graph_pair_doe.dev.yaml  session_graph_pair_doe.dev_flip.yaml  speaker_id_baseline.example.yaml  speaker_id_baseline.prod.yaml  speaker_id_baseline.prod_graph.yaml  speaker_id_baseline.prod_graph_dev_champion.yaml  speaker_id_baseline.prod_graph_honest.yaml  speaker_id_baseline.prod_graph_tuned.yaml  speaker_id_baseline.prod_graph_tuned_pairs.yaml  speaker_id_baseline.prod_iter2.yaml  speaker_id_baseline.prod_iter3.yaml  speaker_id_baseline.prod_iter4.yaml  speaker_id_baseline.smoke.yaml  speaker_id_baseline.smoke_graph.yaml  speaker_mapping.yaml  training.example.yaml  transcriber.example.yaml  transcriber.watch.example.yaml  transcriber.watch.yaml  transcriber.yaml
docs/: PR-plan-chunked-speaker-bank-training.md  PR-robust-speaker-identification.md
docs/sources/: speaker_bank_diarization_tuning_evidence_table.md  speaker_bank_diarization_tuning_sources.md
docs/specs/: speaker_bank_diarization_tuning_decision_report.md  speaker_bank_diarization_tuning_implementation_spec.md  speaker_bank_diarization_tuning_math_spec.md  speaker_bank_diarization_tuning_open_items.md  speaker_bank_diarization_tuning_spec.md
scripts/: analyze_cached_speaker_eval.py  autoresearch_speaker_id.py  cached_purity_classifier_doe.py  downstream_retrain_doe.py  final_speaker_id_rebuild.py  install_watch_service.sh  mine_hard_negatives.py  postprocess_cached_speaker_eval.py  prepare_speaker_id_baseline.py  repair_drvfs_mount.sh  segment_classifier_doe.py  session_graph_doe.py  session_graph_pair_doe.py  speaker_id_doe.py  uninstall_watch_service.sh  watch_baseline_prep.py  watch_service_runner.sh
src/transcriber/: asr.py  audio.py  audio_augment.py  autoresearch_objective.py  autoresearch_speaker_id.py  backend.py  baseline_prep.py  cli.py  consolidate.py  diarization.py  downstream_retrain_doe.py  hard_negatives.py  multitrack_eval.py  parakeet_backend.py  postprocess.py  prep_artifacts.py  segment_classifier.py  segment_postprocess.py  segments.py  session_reassignment.py  speaker_bank.py  srt.py  transcript_pipeline.py  whisperx_backend.py
tests/: test_autoresearch_objective.py  test_autoresearch_speaker_id.py  test_baseline_prep.py  test_cli.py  test_cli_transcribe.py  test_consolidate.py  test_diarization.py  test_downstream_retrain_doe.py  test_hard_negatives.py  test_multitrack_eval.py  test_parakeet_backend.py  test_postprocess.py  test_prep_artifacts.py  test_segment_classifier.py  test_segment_postprocess.py  test_session_reassignment.py  test_smoke_integration.py  test_transcript_pipeline.py
tests/segments/: test_segments.py
tests/speaker_bank/: test_speaker_bank.py
